# industrial_jepa_mvp

./: .gitattributes  .gitignore  PLAN.md  PROMPT.md  README.md  README_DATASETS.md  README_EXPERIMENTS.md  RERUN_PLAN.md  RESULTS_INVALIDATION.md  STATUS.md  pyproject.toml  requirements.txt
artifacts/: registry.jsonl
assets/: industrial_predictive_quality_algorithm_demo.html  industrial_predictive_quality_algorithm_demo_readme.md  product_demo_industrial_mvp.html  product_demo_industrial_mvp_readme.md
docs/: dense_visual_jepa_design.md  research_architecture_notes.md  sensor_incremental_value_design.md
paper/: README.md  main.tex  references.bib
paper_iwm/: README.md  main.tex  references.bib
presentation/: README.md  audi_industrial_predictive_quality_briefing_en.tex  audi_industrial_predictive_quality_eli5_en.html  audi_industrial_predictive_quality_mvp_short_en.html  industrial_predictive_quality_mvp_light_en.html  mvp_calidad_predictiva_industrial_light_es.html  mvp_galicia.html  mvp_galicia_en.html  mvp_galicia_reunion.html  mvp_galicia_reunion_en.html  spain_industrial_outreach_playbook.md  spain_industrial_outreach_targets.csv
results/: index.json
scripts/: 00_create_dataset_manifest.py  01_download_or_prepare_datasets.py  02_prepare_sensor_data.py  03_prepare_visual_data.py  04_pretrain_sensor_jepa.py  05_probe_sensor_jepa.py  06_finetune_sensor_jepa.py  07_eval_sensor_jepa.py  08_pretrain_visual_jepa.py  09_probe_visual_jepa.py  10_finetune_visual_jepa.py  11_eval_visual_jepa.py  12_compare_experiments.py  13_export_sensor_demo_report.py  (+47 more)
(+241 files in other folders)
